--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "npx eleventy",
-    "serve": "npx eleventy --serve",
+    "watch:sass": "sass --watch css/sass:css --style compressed",
+    "build:sass": "sass css/sass:css --style compressed",
+    "watch:eleventy": "npx eleventy --serve",
+    "build:eleventy": "npx eleventy",
+    "start": "npm-run-all build:sass --parallel watch:*",
+    "build": "npm-run-all build:*",
     "debug": "DEBUG=* npx eleventy"
   },
   "keywords": [],
@@ -14,5 +18,9 @@
   "devDependencies": {
     "@11ty/eleventy": "^0.12.1",
     "@11ty/eleventy-plugin-rss": "^1.1.1"
+  },
+  "dependencies": {
+    "npm-run-all": "^4.1.5",
+    "sass": "^1.32.8"
   }
 }
