--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@11ty/eleventy-plugin-rss": "^1.1.1"
   },
   "dependencies": {
+    "@11ty/eleventy-img": "^0.8.3",
     "npm-run-all": "^4.1.5",
     "sass": "^1.32.8"
   }
