--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "devDependencies": {
     "@11ty/eleventy": "^2.0.1",
     "@11ty/eleventy-plugin-rss": "^1.1.1",
-    "@11ty/eleventy-plugin-syntaxhighlight": "^3.1.0"
+    "@11ty/eleventy-plugin-syntaxhighlight": "^3.1.0",
+    "prettier": "3.3.3"
   },
   "dependencies": {
     "@11ty/eleventy-img": "^0.8.3",
